force-app/main/default/objects/Detalle_caso__c/fields/N_Cuenta_Bancaria2_c__c.field-meta.xml
<CustomField>
    <fullName>N_Cuenta_Bancaria2_c__c</fullName>
    <label># Cuenta Bancaria2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>