force-app/main/default/objects/Detalle_caso__c/fields/N_Cuenta_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>N_Cuenta_Bancaria__c</fullName>
    <label># Cuenta Bancaria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>