force-app/main/default/objects/Detalle_caso__c/fields/Nivel_de_Regla__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Regla__c</fullName>
    <label>Nivel de Regla</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cuenta Colectiva</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Sub-Producto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>