force-app/main/default/objects/Detalle_caso__c/fields/No_es_primer_prestamo__c.field-meta.xml
<CustomField>
    <fullName>No_es_primer_prestamo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No es primer prestamo</label>
    <type>Checkbox</type>
</CustomField>