force-app/main/default/objects/Detalle_caso__c/fields/Nueva_Cuenta_colectiva2__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Cuenta_colectiva2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nueva Cuenta colectiva</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cuentas__c.Colectiva__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cuentas__c</referenceTo>
    <relationshipLabel>Detalles caso (Nueva Cuenta colectiva)</relationshipLabel>
    <relationshipName>Detalles_caso</relationshipName>
    <type>Lookup</type>
</CustomField>