force-app/main/default/objects/Detalle_caso__c/fields/Nueva_fecha_aporte__c.field-meta.xml
<CustomField>
    <fullName>Nueva_fecha_aporte__c</fullName>
    <label>Nueva fecha de aporte</label>
    <type>Date</type>
</CustomField>