force-app/main/default/objects/Detalle_caso__c/fields/Nuevo_canal_aporte__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_canal_aporte__c</fullName>
    <label>Nuevo canal de aporte</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Operacion__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CK</fullName>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>AH</fullName>
                <label>Debito a Cuenta de Ahorro</label>
            </value>
            <value>
                <fullName>TA</fullName>
                <label>Debito a Tarjeta de Crédito Ficohsa</label>
            </value>
            <value>
                <fullName>TAOB</fullName>
                <label>Debito a Tarjeta de Crédito Otros Bancos</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Interbanca</label>
            </value>
            <value>
                <fullName>MV</fullName>
                <label>Móvil</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Planilla</label>
            </value>
            <value>
                <fullName>TL</fullName>
                <label>Talonario</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>