force-app/main/default/objects/Detalle_caso__c/fields/Nuevo_monto_aporte__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_monto_aporte__c</fullName>
    <label>Nuevo monto de aporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>