force-app/main/default/objects/Detalle_caso__c/fields/Nuevo_Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Subproducto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nuevo Subproducto</label>
    <referenceTo>Subproducto__c</referenceTo>
    <relationshipName>Cuentas_caso</relationshipName>
    <type>Lookup</type>
</CustomField>