force-app/main/default/objects/Detalle_caso__c/fields/Numero_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_cuenta__c</fullName>
    <formula>Cuenta__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de cuenta</label>
    <type>Text</type>
</CustomField>