force-app/main/default/objects/Detalle_caso__c/fields/Numero_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>Numero_Prestamo__c</fullName>
    <label>Numero del Prestamo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>