force-app/main/default/objects/Detalle_caso__c/fields/Pago_terceros__c.field-meta.xml
<CustomField>
    <fullName>Pago_terceros__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizado en el caso de retiros.</description>
    <label>Pago a Beneficiarios</label>
    <type>Checkbox</type>
</CustomField>