force-app/main/default/objects/Detalle_caso__c/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <label>Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parentesco</valueSetName>
    </valueSet>
</CustomField>