force-app/main/default/objects/Detalle_caso__c/fields/Permitir_Retiro_Saldos_Patronales__c.field-meta.xml
<CustomField>
    <fullName>Permitir_Retiro_Saldos_Patronales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permitir Retiro de Saldos Patronales</label>
    <type>Checkbox</type>
</CustomField>