force-app/main/default/objects/Detalle_caso__c/fields/Porcentaje_comision__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_comision__c</fullName>
    <label>Porcentaje comisión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>