force-app/main/default/objects/Detalle_caso__c/fields/Porcentaje_CRA_Individual__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_CRA_Individual__c</fullName>
    <label>Porcentaje CRA Individual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>