force-app/main/default/objects/Detalle_caso__c/fields/Porcentaje_Saldo_Patronal_Ext__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Saldo_Patronal_Ext__c</fullName>
    <label>Porcentaje Saldo Patronal Extraordinario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>