force-app/main/default/objects/Detalle_caso__c/fields/POS__c.field-meta.xml
<CustomField>
    <fullName>POS__c</fullName>
    <label>POS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ficohsa</fullName>
            </value>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>Otros Bancos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>