force-app/main/default/objects/Detalle_caso__c/fields/Prestamo_anterior__c.field-meta.xml
<CustomField>
    <fullName>Prestamo_anterior__c</fullName>
    <label>Prestamo anterior</label>
    <length>100</length>
    <type>Text</type>
</CustomField>