force-app/main/default/objects/Detalle_caso__c/fields/Primer_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Primer_Nombre__c</fullName>
    <label>Primer Nombre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>