force-app/main/default/objects/Detalle_caso__c/fields/Producto_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Producto_Anterior__c</fullName>
    <label>Producto Anterior</label>
    <length>100</length>
    <type>Text</type>
</CustomField>