force-app/main/default/objects/Detalle_caso__c/fields/Propietario_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Propietario_cuenta__c</fullName>
    <label>Propietario de la cuenta</label>
    <length>254</length>
    <type>Text</type>
</CustomField>