force-app/main/default/objects/Detalle_caso__c/fields/Rendimiento__c.field-meta.xml
<CustomField>
    <fullName>Rendimiento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rendimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>