force-app/main/default/objects/Detalle_caso__c/fields/Respuesta_SF_Tarjetas__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_SF_Tarjetas__c</fullName>
    <description>Respuesta desde Salesforce tarjeta, Ficohsa o Bac</description>
    <inlineHelpText>Respuesta desde Salesforce tarjeta, Ficohsa o Bac</inlineHelpText>
    <label>Respuesta Otro Sistema</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>