force-app/main/default/objects/Detalle_caso__c/fields/Saldo_enviar_Sysde__c.field-meta.xml
<CustomField>
    <fullName>Saldo_enviar_Sysde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saldo a enviar a Sysde</label>
    <type>Checkbox</type>
</CustomField>