force-app/main/default/objects/Detalle_caso__c/fields/Saldo_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Prestamo__c</fullName>
    <label>Saldo del Prestamo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>