force-app/main/default/objects/Detalle_caso__c/fields/Saldo_Restante_Cuenta_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Restante_Cuenta_Cliente__c</fullName>
    <label>Saldo Restante a la Cuenta del Cliente</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>