force-app/main/default/objects/Detalle_caso__c/fields/Saldo_retirar__c.field-meta.xml
<CustomField>
    <fullName>Saldo_retirar__c</fullName>
    <label>Saldo a retirar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_saldo</valueSetName>
    </valueSet>
</CustomField>