force-app/main/default/objects/Detalle_caso__c/fields/Saldo_total__c.field-meta.xml
<CustomField>
    <fullName>Saldo_total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Saldo total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>