force-app/main/default/objects/Detalle_caso__c/fields/Se_lleva_Parte_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Se_lleva_Parte_Patronal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Se lleva Parte Patronal</label>
    <type>Checkbox</type>
</CustomField>