force-app/main/default/objects/Detalle_caso__c/fields/Segundo_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Apellido__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <label>Segundo Apellido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>