force-app/main/default/objects/Detalle_caso__c/fields/Subtipo_transaccion__c.field-meta.xml
<CustomField>
    <fullName>Subtipo_transaccion__c</fullName>
    <label>Subtipo de transacción</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_transaccion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
                <label>Acreditación de Rendimiento</label>
            </value>
            <value>
                <fullName>C10</fullName>
                <label>Acreditación de Aporte</label>
            </value>
            <value>
                <fullName>C8</fullName>
                <label>Acreditación de Aporte POS</label>
            </value>
            <value>
                <fullName>C9</fullName>
                <label>Acreditación de Promoción</label>
            </value>
            <value>
                <fullName>C4</fullName>
                <label>Reversión de Comisión por Aporte</label>
            </value>
            <value>
                <fullName>C5</fullName>
                <label>Reversión de Comisión por Saldo</label>
            </value>
            <value>
                <fullName>C6</fullName>
                <label>Reversión de Retiro</label>
            </value>
            <value>
                <fullName>D1</fullName>
                <label>Cobro de comisión por aporte</label>
            </value>
            <value>
                <fullName>D2</fullName>
                <label>Cobro de comisión por saldo</label>
            </value>
            <value>
                <fullName>D3</fullName>
                <label>Reversión de Aporte</label>
            </value>
            <value>
                <fullName>D4</fullName>
                <label>Reversión de Rendimiento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>