force-app/main/default/objects/Detalle_caso__c/fields/Tiene_Cuenta_Colectiva__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Cuenta_Colectiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene Cuenta Colectiva</label>
    <type>Checkbox</type>
</CustomField>