force-app/main/default/objects/Detalle_caso__c/fields/Tipo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cuenta__c</fullName>
    <label>Tipo de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahorro</fullName>
            </value>
            <value>
                <fullName>Cheques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>