force-app/main/default/objects/Detalle_caso__c/fields/Tipo_de_cuenta_destino__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cuenta_destino__c</fullName>
    <label>Tipo de Cuenta Destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
                <label>Ahorro</label>
            </value>
            <value>
                <fullName>Checking</fullName>
                <label>Cheques</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>