force-app/main/default/objects/Detalle_caso__c/fields/Tipo_identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_identificacion__c</fullName>
    <label>Tipo identificacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Identificacion2</valueSetName>
    </valueSet>
</CustomField>