force-app/main/default/objects/Detalle_caso__c/fields/Tipo_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Operacion__c</fullName>
    <label>Tipo de Operación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <default>true</default>
                <label>Aumento de Aporte</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>Disminución de Aporte</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>Cambio de Canal de Aporte</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>Cambio de Fecha de Aporte</label>
            </value>
            <value>
                <fullName>A5</fullName>
                <label>Cambio de # de CA/CC</label>
            </value>
            <value>
                <fullName>A6</fullName>
                <label>Cambio de # Tarjeta</label>
            </value>
            <value>
                <fullName>A7</fullName>
                <label>Cancelación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>