force-app/main/default/objects/Detalle_caso__c/fields/Tipo_pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_pago__c</fullName>
    <label>Tipo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>Pago normal</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Pago a terceros</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Pago a beneficiarios</label>
            </value>
            <value>
                <fullName>R</fullName>
                <isActive>false</isActive>
                <label>Retiro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>