force-app/main/default/objects/Detalle_caso__c/fields/Tipo_retiro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_retiro__c</fullName>
    <label>Tipo de retiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>52</fullName>
                <label>Total</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Parcial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>