force-app/main/default/objects/Detalle_caso__c/fields/Tipo_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Saldo__c</fullName>
    <label>Tipo de Saldo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Personal Ordinario</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Personal Extraordinario</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Patronal Ordinario</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Patronal Extraordinario</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>