force-app/main/default/objects/Detalle_caso__c/fields/Tipo_saldo_modificar2__c.field-meta.xml
<CustomField>
    <fullName>Tipo_saldo_modificar2__c</fullName>
    <label>Tipo de saldo a modificar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_saldo</valueSetName>
    </valueSet>
</CustomField>