force-app/main/default/objects/Detalle_caso__c/fields/Tipo_transaccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_transaccion__c</fullName>
    <label>Tipo de transacción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Debido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>