force-app/main/default/objects/Detalle_caso__c/fields/TipoBeneficiario__c.field-meta.xml
<CustomField>
    <fullName>TipoBeneficiario__c</fullName>
    <label>Tipo de Beneficiario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directo</fullName>
            </value>
            <value>
                <fullName>Contingencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>