force-app/main/default/objects/Detalle_caso__c/fields/Total_exonerado__c.field-meta.xml
<CustomField>
    <fullName>Total_exonerado__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total exonerado en el mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>