force-app/main/default/objects/Detalle_caso__c/validationRules/ADA_monto_de_aporte_igual.validationRule-meta.xml
<ValidationRule>
    <fullName>ADA_monto_de_aporte_igual</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;,Nuevo_monto_aporte__c =  Cuenta__r.Monto_aporte__c , OR(ISPICKVAL( Tipo_Operacion__c , &apos;A1&apos;), ISPICKVAL( Tipo_Operacion__c , &apos;A2&apos;)))</errorConditionFormula>
    <errorDisplayField>Nuevo_monto_aporte__c</errorDisplayField>
    <errorMessage>El nuevo monto de aporte especificado es igual al original</errorMessage>
</ValidationRule>