force-app/main/default/objects/Detalle_caso__c/validationRules/ADA_monto_de_aporte_mayor_aumento.validationRule-meta.xml
<ValidationRule>
    <fullName>ADA_monto_de_aporte_mayor_aumento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;,Nuevo_monto_aporte__c &lt; Cuenta__r.Monto_aporte__c , ISPICKVAL( Tipo_Operacion__c , &apos;A1&apos;))</errorConditionFormula>
    <errorDisplayField>Nuevo_monto_aporte__c</errorDisplayField>
    <errorMessage>El nuevo monto de aporte no puede ser menor al original al ser un aumento</errorMessage>
</ValidationRule>