force-app/main/default/objects/Detalle_caso__c/validationRules/ADA_monto_de_aporte_menor_disminucion.validationRule-meta.xml
<ValidationRule>
    <fullName>ADA_monto_de_aporte_menor_disminucion</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;,Nuevo_monto_aporte__c &gt; Cuenta__r.Monto_aporte__c , ISPICKVAL( Tipo_Operacion__c , &apos;A2&apos;))</errorConditionFormula>
    <errorDisplayField>Nuevo_monto_aporte__c</errorDisplayField>
    <errorMessage>El nuevo monto de aporte no puede ser mayor al original al ser una disminución</errorMessage>
</ValidationRule>