force-app/main/default/objects/Detalle_caso__c/validationRules/ADA_nuevo_fecha_aporte.validationRule-meta.xml
<ValidationRule>
    <fullName>ADA_nuevo_fecha_aporte</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;, ISBLANK(Nueva_fecha_aporte__c), ISPICKVAL( Tipo_Operacion__c , &apos;A4&apos;))</errorConditionFormula>
    <errorDisplayField>Nueva_fecha_aporte__c</errorDisplayField>
    <errorMessage>Debes establecer una nueva fecha de aporte</errorMessage>
</ValidationRule>