force-app/main/default/objects/Detalle_caso__c/validationRules/ADA_nuevo_medio_aporte_cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>ADA_nuevo_medio_aporte_cuenta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;, ISBLANK(N_Cuenta_Bancaria__c),OR(ISPICKVAL( Tipo_Operacion__c , &apos;A5&apos;),ISPICKVAL( Tipo_Operacion__c , &apos;A6&apos;)))</errorConditionFormula>
    <errorDisplayField>N_Cuenta_Bancaria__c</errorDisplayField>
    <errorMessage>Debes establecer un # de cuenta o tarjeta</errorMessage>
</ValidationRule>