force-app/main/default/objects/Detalle_caso__c/validationRules/ADA_nuevo_monto_de_aporte.validationRule-meta.xml
<ValidationRule>
    <fullName>ADA_nuevo_monto_de_aporte</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;, ISBLANK(Nuevo_monto_aporte__c), OR(ISPICKVAL( Tipo_Operacion__c , &apos;A1&apos;), ISPICKVAL( Tipo_Operacion__c , &apos;A2&apos;)))</errorConditionFormula>
    <errorDisplayField>Nuevo_monto_aporte__c</errorDisplayField>
    <errorMessage>Debes establecer un monto de aporte nuevo.</errorMessage>
</ValidationRule>