force-app/main/default/objects/Detalle_caso__c/validationRules/ADA_Validar_nuevo_canal_aporte.validationRule-meta.xml
<ValidationRule>
    <fullName>ADA_Validar_nuevo_canal_aporte</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;, ISPICKVAL(Nuevo_canal_aporte__c,&apos;&apos;), ISPICKVAL( Tipo_Operacion__c , &apos;A3&apos;))</errorConditionFormula>
    <errorDisplayField>Nuevo_canal_aporte__c</errorDisplayField>
    <errorMessage>Debes establecer un nuevo canal de aporte</errorMessage>
</ValidationRule>