force-app/main/default/objects/Detalle_caso__c/validationRules/DAU_monto_comparacion_HNL.validationRule-meta.xml
<ValidationRule>
    <fullName>DAU_monto_comparacion_HNL</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Caso__r.RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;,
ISPICKVAL(Tipo_Operacion__c , &apos;A2&apos;), 
ISPICKVAL(Cuenta__r.Producto__r.CurrencyIsoCode, &apos;HNL&apos;), Nuevo_monto_aporte__c = $CustomMetadata.Parametros_DAU__mdt.Disminucion_de_aporte_HNL.Monto_a_Disminuir__c 
)</errorConditionFormula>
    <errorMessage>test</errorMessage>
</ValidationRule>