force-app/main/default/objects/Detalle_caso__c/validationRules/Porcentaje_no_negativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Porcentaje_no_negativo</fullName>
    <active>true</active>
    <errorConditionFormula>Porcentaje__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Porcentaje__c</errorDisplayField>
    <errorMessage>El porcentaje no puede ser negativo</errorMessage>
</ValidationRule>