force-app/main/default/objects/Detalle_caso__c/validationRules/RETIROS_monto_de_retiro_no_mayor.validationRule-meta.xml
<ValidationRule>
    <fullName>RETIROS_monto_de_retiro_no_mayor</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Retiros&apos;, Monto_retirar__c &gt; Monto_saldo__c, !Cabeza_retiro__c, ISPICKVAL(Tipo_retiro__c,&apos;51&apos;))</errorConditionFormula>
    <errorDisplayField>Monto_retirar__c</errorDisplayField>
    <errorMessage>Monto a retirar no puede ser mayor al monto del saldo</errorMessage>
</ValidationRule>