force-app/main/default/objects/Detalle_caso__c/validationRules/RETIROS_monto_de_retiro_no_negativo.validationRule-meta.xml
<ValidationRule>
    <fullName>RETIROS_monto_de_retiro_no_negativo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Retiros&apos;, !Cabeza_retiro__c, Monto_retirar__c &lt; 0 , ISPICKVAL(Tipo_retiro__c,&apos;51&apos;))</errorConditionFormula>
    <errorDisplayField>Monto_retirar__c</errorDisplayField>
    <errorMessage>Monto de retiro no puede ser negativo</errorMessage>
</ValidationRule>