force-app/main/default/objects/Detalle_caso__c/validationRules/RETIROS_nuevo_monto_de_retiro.validationRule-meta.xml
<ValidationRule>
    <fullName>RETIROS_nuevo_monto_de_retiro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Retiros&apos;, ISBLANK(Monto_retirar__c), ISPICKVAL(Tipo_retiro__c,&apos;Parcial&apos;))</errorConditionFormula>
    <errorDisplayField>Monto_retirar__c</errorDisplayField>
    <errorMessage>Debes establecer un monto de retiro</errorMessage>
</ValidationRule>