force-app/main/default/objects/Detalle_caso__c/validationRules/RETIROS_Validar_Forma_Retiro.validationRule-meta.xml
<ValidationRule>
    <fullName>RETIROS_Validar_Forma_Retiro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Retiros&apos;, Cabeza_retiro__c,  ISPICKVAL(Forma_Retiro__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Forma_Retiro__c</errorDisplayField>
    <errorMessage>Debes establecer una Forma de retiro</errorMessage>
</ValidationRule>