force-app/main/default/objects/Detalle_caso__c/validationRules/RETIROS_Validar_Forma_Retiro_ACH.validationRule-meta.xml
<ValidationRule>
    <fullName>RETIROS_Validar_Forma_Retiro_ACH</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Caso__r.RecordType.DeveloperName = &apos;Retiros&apos;, 
Cabeza_retiro__c, 
OR( 
AND( 
ISPICKVAL(Forma_Retiro__c, &apos;ACH&apos;), 
OR( 
ISPICKVAL(Banco__c, &apos;&apos;), 
ISPICKVAL(Tipo_Cuenta__c, &apos;&apos;), 
(VALUE(N_Cuenta_Bancaria__c) &lt;= 0), 
ISPICKVAL(CurrencyIsoCode, &apos;&apos;) 
) 
), 
AND( 
ISPICKVAL(Forma_Retiro__c, &apos;AH&apos;), 
OR( 
ISPICKVAL(Cuenta_destino__c, &apos;&apos;), 
ISPICKVAL(Tipo_Cuenta__c, &apos;&apos;), 
(VALUE(N_Cuenta_Bancaria__c) &lt;= 0), 
ISPICKVAL(CurrencyIsoCode, &apos;&apos;) 
) 
) 
) 
)</errorConditionFormula>
    <errorMessage>Favor completar todos los campos requeridos.</errorMessage>
</ValidationRule>