force-app/main/default/objects/Detalle_caso__c/validationRules/RETIROS_Validar_numero_cuenta_retiros.validationRule-meta.xml
<ValidationRule>
    <fullName>RETIROS_Validar_numero_cuenta_retiros</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Retiros&apos;, ISBLANK(N_Cuenta_Bancaria__c),  Cabeza_retiro__c,  OR(ISPICKVAL(Forma_Retiro__c,&apos;Credito a Cuenta Ficohsa&apos;), ISPICKVAL(Forma_Retiro__c,&apos;Transferencia ACH&apos;)))</errorConditionFormula>
    <errorDisplayField>N_Cuenta_Bancaria__c</errorDisplayField>
    <errorMessage>Debes establecer un número de cuenta</errorMessage>
</ValidationRule>