force-app/main/default/objects/Detalle_caso__c/validationRules/SUBPRODUCTO_cambio_subproducto_sin_CC.validationRule-meta.xml
<ValidationRule>
    <fullName>SUBPRODUCTO_cambio_subproducto_sin_CC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Cambio_Subproducto&apos;, Cuenta__r.Cuenta_colectiva2__c != null, ISPICKVAL( Accion__c , &apos;A2&apos;))</errorConditionFormula>
    <errorDisplayField>Accion__c</errorDisplayField>
    <errorMessage>No puedes cambiar de subproducto a cuenta pertenece a una cuenta colectiva.</errorMessage>
</ValidationRule>