force-app/main/default/objects/Detalle_caso__c/validationRules/SUBPRODUCTO_diferente_cuenta_colectiva.validationRule-meta.xml
<ValidationRule>
    <fullName>SUBPRODUCTO_diferente_cuenta_colectiva</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Cambio_Subproducto&apos;,  Cuenta__r.Cuenta_colectiva2__c = Nueva_Cuenta_colectiva2__c, ISPICKVAL( Accion__c , &apos;A1&apos;))</errorConditionFormula>
    <errorDisplayField>Nueva_Cuenta_colectiva2__c</errorDisplayField>
    <errorMessage>No puedes seleccionar la misma cuenta colectiva</errorMessage>
</ValidationRule>