force-app/main/default/objects/Detalle_caso__c/validationRules/SUBPRODUCTO_diferente_moneda_subproducto.validationRule-meta.xml
<ValidationRule>
    <fullName>SUBPRODUCTO_diferente_moneda_subproducto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Cambio_Subproducto&apos;, Text(Cuenta__r.Subproducto__r.CurrencyIsoCode) != Text(Nuevo_Subproducto__r.CurrencyIsoCode), ISPICKVAL( Accion__c , &apos;A2&apos;))</errorConditionFormula>
    <errorDisplayField>Nuevo_Subproducto__c</errorDisplayField>
    <errorMessage>No puede elegir un subproducto de diferente moneda</errorMessage>
</ValidationRule>