force-app/main/default/objects/Detalle_caso__c/validationRules/SUBPRODUCTO_diferente_subproducto.validationRule-meta.xml
<ValidationRule>
    <fullName>SUBPRODUCTO_diferente_subproducto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Cambio_Subproducto&apos;,  Cuenta__r.Subproducto__c = Nuevo_Subproducto__c, ISPICKVAL( Accion__c , &apos;A2&apos;))</errorConditionFormula>
    <errorDisplayField>Nuevo_Subproducto__c</errorDisplayField>
    <errorMessage>No puedes seleccionar el mismo subproducto</errorMessage>
</ValidationRule>