force-app/main/default/objects/Detalle_caso__c/validationRules/SUBPRODUCTO_nueva_cuenta_colectiva.validationRule-meta.xml
<ValidationRule>
    <fullName>SUBPRODUCTO_nueva_cuenta_colectiva</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Cambio_Subproducto&apos;,ISBLANK(Nueva_Cuenta_colectiva2__c), ISPICKVAL( Accion__c , &apos;A1&apos;))</errorConditionFormula>
    <errorDisplayField>Nueva_Cuenta_colectiva2__c</errorDisplayField>
    <errorMessage>Debes establecer una nueva cuenta colectiva</errorMessage>
</ValidationRule>