force-app/main/default/objects/Detalle_caso__c/validationRules/SUBPRODUCTO_nuevo_subproducto.validationRule-meta.xml
<ValidationRule>
    <fullName>SUBPRODUCTO_nuevo_subproducto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Caso__r.RecordType.DeveloperName = &apos;Cambio_Subproducto&apos;,ISBLANK(Nuevo_Subproducto__c), ISPICKVAL( Accion__c , &apos;A2&apos;))</errorConditionFormula>
    <errorDisplayField>Nuevo_Subproducto__c</errorDisplayField>
    <errorMessage>Debes establecer un nuevo subproducto</errorMessage>
</ValidationRule>